--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -99,18 +99,16 @@ Content-type: text/html
 	    </p>
           </div>
           <div class="col-md-5">
-            <h4>このサイトについて</h4>
-            <p>$subtitle$</p>
-            <h5>フォロー・登録おねがいします！</h5>
-            <script src="https://apis.google.com/js/platform.js"></script>
-            <div class="g-ytsubscribe" data-channel="ryuichiueda" data-layout="full" data-count="default"></div>
-            <div class="g-ytsubscribe" data-channelid="UCNnuBjHrb2UYBUi0I5otmjQ" data-layout="full" data-count="default"></div>
-            <div><a href="https://misskey.io/@ryuichiueda">Misskey.io</a>/<a href="https://mi.shellgei.org/@ru">しぇるげいすきー</a>/<a href="https://mi0.robotician.jp/@ru">roboticskey</a>/
-              $for(sociallinks)$
-              <a href="$sociallinks.href$"><i class="fa $sociallinks.icon$"></i></a>
-              $endfor$
-            </div>
-
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7242808947152948" crossorigin="anonymous"></script>
+            <ins class="adsbygoogle"
+              style="display:block"
+              data-ad-client="ca-pub-7242808947152948"
+              data-ad-slot="1700080238"
+              data-ad-format="auto"
+              data-full-width-responsive="true"></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
           </div>
         </div>
       </div>
@@ -162,16 +160,18 @@ Content-type: text/html
         </div>
 	<div class="col-md-4" id="widgets">
           <aside>
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7242808947152948" crossorigin="anonymous"></script>
-            <ins class="adsbygoogle"
-              style="display:block"
-              data-ad-client="ca-pub-7242808947152948"
-              data-ad-slot="1700080238"
-              data-ad-format="auto"
-              data-full-width-responsive="true"></ins>
-            <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+	    <h2 id="thissite">このサイトについて</h2>
+            <p>$subtitle$</p>
+            <h3>フォローお願いします</h3>
+            <script src="https://apis.google.com/js/platform.js"></script>
+            <div class="g-ytsubscribe" data-channel="ryuichiueda" data-layout="full" data-count="default"></div>
+            <div class="g-ytsubscribe" data-channelid="UCNnuBjHrb2UYBUi0I5otmjQ" data-layout="full" data-count="default"></div>
+            <div><a href="https://misskey.io/@ryuichiueda">Misskey.io</a>/<a href="https://mi.shellgei.org/@ru">しぇるげいすきー</a>/<a href="https://mi0.robotician.jp/@ru">roboticskey</a>/
+              $for(sociallinks)$
+              <a href="$sociallinks.href$"><i class="fa $sociallinks.icon$"></i></a>
+              $endfor$
+            </div>
+	   
           </aside>
 	  <h2 id="activity">やり散らかし一覧</h2>
           <aside>
