--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -155,7 +155,17 @@ Content-type: text/html
 	    $endif$
 	  </div>
 
-          <br />
+	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7242808947152948"
+                  crossorigin="anonymous"></script>
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-format="autorelaxed"
+                 data-ad-client="ca-pub-7242808947152948"
+                 data-ad-slot="7425273537"></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+
           <br />
 	  <p id="prev-next-nav">$nav$</p>
         </div>
@@ -167,9 +177,9 @@ Content-type: text/html
             <script src="https://apis.google.com/js/platform.js"></script>
             <div class="g-ytsubscribe" data-channel="ryuichiueda" data-layout="full" data-count="default"></div>
             <div class="g-ytsubscribe" data-channelid="UCNnuBjHrb2UYBUi0I5otmjQ" data-layout="full" data-count="default"></div>
-            <div><a href="https://misskey.io/@ryuichiueda">Misskey.io</a>/<a href="https://mi.shellgei.org/@ru">しぇるげいすきー</a>/<a href="https://mi0.robotician.jp/@ru">roboticskey</a>/
+	    <div>
               $for(sociallinks)$
-              <a href="$sociallinks.href$"><i class="fa-brands $sociallinks.icon$"></i></a>
+              <a href="$sociallinks.href$">$sociallinks.icon$</a>/
               $endfor$
             </div>
 	   
