--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -171,7 +171,7 @@ Content-type: text/html
         </div>
 	<div class="col-md-4" id="widgets">
           <aside>
-	    <h2 id="thissite">このサイトについて</h2>
+            <h2 id="thissite">このサイトについて</h2>
             <p>$subtitle$</p>
             <h3><i class="fa-solid fa-user-plus"></i>フォローお願いします</h3>
             <script src="https://apis.google.com/js/platform.js"></script>
@@ -230,7 +230,7 @@ Content-type: text/html
       <hr>
 
       <footer>
-        <p>$Copyright$ <a href="/?page=privacy">このサイトについて</a></p>
+        <p>$Copyright$ <a href="/?page=privacy">このサイトについて</a> / <img width="22" src="/pages/top/misskey.png" />ロゴは<a href="https://misskey-hub.net/ja/brand-assets/">Misske Hubのアセット集<i class="fa fa-external-link"></i></a>にあるものをCC BY-NC-SAのライセンスの下で利用しています。</p>
       </footer>
     </div> <!-- /container -->
 
