Add ad blocking recovery messages

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -3,6 +3,7 @@ Content-type: text/html
 <!DOCTYPE html>
 <html lang="ja">
   <head>
+    <script async src="https://fundingchoicesmessages.google.com/i/pub-7242808947152948?ers=1" nonce="MRBqDh-8PeLvXACz3nJUYA"></script><script nonce="MRBqDh-8PeLvXACz3nJUYA">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P880TWK891"></script>
     <script>
